Fixed z-index bug in navigation for IE7.

--- a/var/httpd/htdocs/skins/Agent/default/OTRS.Header.IE7.css
+++ b/var/httpd/htdocs/skins/Agent/default/OTRS.Header.IE7.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.1 $
+ * @version     $Revision: 1.2 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  * @css-for     IE7
@@ -16,6 +16,10 @@
  */
 #Header {
     z-index: 200;
+}
+
+#Navigation {
+    z-index: 220;
 }
 
 #Navigation > li.Active li.Active {
